# PMLib

./: README.md
Python/client/: line.h  makefile  pm_calculate_energy.c  pm_continue_counter.c  pm_create_counter.c  pm_finalize_counter.c  pm_fprint_counter_info.c  pm_get_and_print_data_paraver.c  pm_get_counter_data.c  pm_get_counter_num_sets.c  pm_get_device_info.c  pm_get_devices.c  pm_info  pm_print_data_csv.c  pm_print_data_otf.c  pm_print_data_paraver.c  pm_print_data_paraver_cstates.c  pm_print_data_paraver_pstates.c  pm_print_data_stdout.c  pm_print_data_text.c  pm_set_lines.c  pm_set_server.c  pm_start_counter.c  pm_stop_counter.c  pmlib.h  vt_pmlib_plugin.c
Python/client/plugins/: compile_plugin_scorep.sh  dataheap_plugin.c  scorep_pmlib_plugin.c  vt_pmlib_plugin.c
Python/client/test/: .pwr  example0.c  example1.c  example2.c  example3.c  example4.c  makefile  pm_measure.c
Python/client/test/vt/: compile.sh  mpi_vt_test.c  test.c  vt_test.c  vt_test_script.sh
Python/server/: pm  pm_server  settings.py  settings.py.uji
Python/server/daemon/: Server.py  __init__.py
Python/server/daemon/devices/: ArduPowerDevice.py  DC2Device.py  DCDevice.py  Device.py  DummyDevice.py  IPMIDevice.py  LMG450Device.py  NIDevice.py  NIDevice_bo.py  PDUDevice.py  WattsUpDevice.py  __init__.py
Python/server/daemon/modules/: Computer.py  Counter.py  Info.py  __init__.py  nohup.out
new/: CMakeLists.txt  settings-APCape.json  settings-test.json  settings.json
new/pmlib/: counter.cpp  counter.hpp  device.cpp  device.hpp  info.cpp  info.hpp  pmlib_server.cpp  server.cpp  server.hpp
new/pmlib/devices/: APCape.hpp  ArduPower.hpp  LMG.hpp  LMG450.hpp  WattsUp.hpp  devices.hpp
new/pmlib/utils/: color.hpp  daemonize.hpp  logger.hpp
new/stxxl/: CMakeLists.txt
